--- a/src/App.css
+++ b/src/App.css
@@ -1,161 +1,312 @@
 #container{
-  width:100%;
-  height:100%;
-
+  width: 100%;
+  height: 100%;
 }
 
 #header{
-    width:100%;
-    height:70px;
-    background-color:rgb(239, 245, 239);
-    
+  width: 100%;
+  height: 70px;
+  background-color: white;
 }
 
 #footer{
-  width:100%;
-  height:40px;
-  background-color: rgb(133, 131, 131);
+  width: 100%;
+  height: 40px;
+  background-color: white;
+ 
 }
 #content{
-  width:100%;
-  height:calc(100% - 110px);
-  background-color:rgb(219, 225, 213);
+  width: 100%;
+  height: calc(100% - 110px);
+  background-color: rgb(139, 194, 215);
 }
 
 #header .logo{
-  position:relative;
-  width:40px;
+  position: relative;
+  width: 40px;
   float: left;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-#header .title{
-  position: relative;
-  float: left;
-  margin-left: 10px;
-  margin-top: 10px;
-  font-size: 20pt;
-  font-weight: bold;
-}
-#header .title span{
-color: skyblue;
-} 
-
-#header .signinlogo{
-  width: 20px;
-  position: relative;
-  float: right;
-  margin-top: 20px;
-  margin-right: 10px;
-  cursor: pointer;
-}
-
-#header .signintext{
-  position: relative;
-  float: right;
-  font-size: 15pt;
-  margin-right: 10px;
-  margin-top: 20px;
-  font-weight: bold;
-  color: forestgreen;
-  cursor: pointer;
-  
-  
-} 
-#header .signintext:hover, .signinlogo:hover + .signintext{
-  color:bisque;
-  text-decoration: underline;
-  
-
-}
-
-#footer .copyrightText
-{
-  font-size: 15px;
-  position: relative;
   margin-left: 10px;
   top: 15px;
-  color: rgb(29, 30, 30);
+}
+
+#header .headerText{
+  position: relative;
+  float: left;
+  margin-left: 10px;
+  top: 15px;
+  font-size: 22pt;
+  font-weight: bold;
+  color: rgb(59, 57, 57);
 
 }
-#footer .socialmedia
-{
+
+#header .headerText span{
+  color: rgb(15, 69, 154);
+}
+
+#header .signinLogo{
+  width: 30px;
   position: relative;
-  width: 20px;
   float: right;
   margin-right: 10px;
-  top:-5px;
+  top: 20px;
+  cursor: pointer;
+}
+
+#header .signinText{
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  top: 20px;
+  font-size: 18pt;
+  color: rgb(5, 96, 86);
+  cursor: pointer;
+}
+
+#header .signinText:hover, .signinLogo:hover + .signinText{
+  color: rgb(3, 63, 56);
+  text-decoration: underline;
+}
+
+#footer .copyrightText{
+  position: relative;
+  float: left;
+  margin-left: 10px;
+  top: 10px;
+  color: rgb(96, 94, 94);
+}
+
+#footer .socialmediaIcon{
+  position: relative;
+  float: right;
+  width: 20px;
+  margin-right: 10px;
+  top: 12px;
   cursor: pointer;
 }
 
 #content .text1{
   position: relative;
   margin-left: 15px;
-  top:60px;
-  color:blueviolet;
+  top: 60px;
+  color: rgb(4, 135, 74);
   font-weight: bold;
-  font-family:'Times New Roman', Times, serif;
-  font-size: medium;
 }
-
-#content .text2
-{
+#content .text2{
   position: relative;
   margin-left: 15px;
-  top:80px;
-  color:blue;
+  top: 80px;
+  color: rgb(44, 41, 41);
   font-weight: bold;
-  font-family:'Times New Roman', Times, serif;
   font-size: 24pt;
 }
-#content .text3
-{
+
+#content .text3{
   position: relative;
   margin-left: 15px;
-  top:100px;
-  color:green;
-  font-family:'Times New Roman', Times, serif;
-  font-size: 20pt;
+  top: 100px;
+  color: rgb(72, 61, 61);
+  font-size: 18pt;
 }
+
 #content .searchBar{
   position: relative;
-  width: 650px;
+  width: 700px;
   height: 40px;
   background-color: white;
   margin-left: 15px;
   top: 120px;
   border-radius: 5px;
   padding: 3px;
+
 }
+
 #searchText{
+  width: 280px;
+  height: 40px;
+  border: none;
+  border-right: 2px solid silver;
+  font-size: 12pt;
+  background: url('/searchicon.png') no-repeat;
+  background-size: 40px 30px;
+  padding-left: 40px;
+  background-position: 0px center;
+}
+#searchLocation{
   width: 220px;
   height: 40px;
-  background: url('/searchicon.png') no-repeat;
-  padding-left: 40px;
   border: none;
-  background-size: 40px 30px;
   font-size: 12pt;
-  background-position: 0px ,center;
-  border-right: 1px solid silver;
+  background: url('/location.png') no-repeat;
+  background-size: 30px 20px;
+  padding-left: 30px;
+  background-position: 0px center;    
 }
-#searchlocation{
-    width: 220px;
-    height: 40px;
-    border: none;
-    font-size: 12pt;
-    background: url('/location.png') no-repeat;
-    background-size: 30px 20px;
-    padding-left: 40px;
-    background-position: 0px center;  
-}
-#SearchButton{
+
+#searchButton{
   width: 110px;
   height: 30px;
+  background-color: darkgreen;
   border: none;
-  top:5px;
   color: white;
-  background-color: green;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  
+}
+
+#popup{
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, 0.25);
+  position: fixed;    
+  z-index: 999;
+  display: none;
+}
+
+#popupWindow{
+  width: 300px;
+  height: 450px;
+  background: white;  
+  position: relative; 
+  margin-left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+}
+
+#popupHeader{
+  width: 100%;
+  height: 60px;
+  background: rgb(13, 180, 104);
+  color: white;
+  font-size: 16pt;
+  font-weight: bold;
+  text-align: center;
+  line-height: 60px;  
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;  
+}
+
+#signin{
+  width: calc(100% - 10px);
+  height: calc(100% - 60px);
+  background: white;
+  padding: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#usernameLabel{
+  display: block;
+  padding: 40px 0px 5px 0px;
+}
+#passwordLabel{
+  display: block;
+  padding: 10px 0px 5px 0px;
+}
+
+input{
+  width: calc(100% - 10px);
+  height: 30px;
+  border: 1px solid silver;
+  border-radius: 5px;
+}
+
+#forgotPassword{
+  display: block;
+  height: 30px; 
+  line-height: 30px;
+  text-align: right;
+  font-size: 10pt;     
+}
+
+#forgotPassword span{
+  color: rgb(13, 180, 104);
+  cursor: pointer;
+}
+#forgotPassword span:hover{
+  color: rgb(13, 150, 104);
+}
+
+#signinButton{
+  width: calc(100% - 5px);
+  height: 30px;
+  background: rgb(13, 180, 104);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;    
+}
+
+#signinButton:hover{
+  background: rgb(13, 150, 104);
+}
+
+#div1{
+  width: 100%;
+  height: 80px;
+}
+
+#div2{
+  display: block;
+  text-align: center;
+}
+
+#div2 span{
+  display: block;
+  color: rgb(13, 180, 104);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#div2 span:hover{
+  color: rgb(13, 150, 104);
+}
+
+#signup{
+  width: calc(100% - 10px);
+  height: calc(100% - 60px);
+  background: white;
+  padding: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#signin label{
+  display: block;
+  padding: 10px 0px 5px 0px;
+}
+
+#signupButton{
+  width: calc(100% - 5px);
+  height: 30px;
+  background: rgb(13, 180, 104);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;  
+  margin-top: 10px;  
+}
+
+#role{
+  width: calc(100% - 10px);
+  height: 30px;
+  border: 1px solid silver;
+  border-radius: 5px;
+}
+
+#div3{
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+}
+
+#div3 span{
+  display: block;
+  color: rgb(13, 180, 104);
+  font-weight: bold;
   cursor: pointer;
 }
