--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 #root{
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
+
 }
 
-html,body{
-  width :100%;
+html, body{
+  width: 100%;
   height: 100%;
   margin: 0px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 :focus{
   outline: none;
 }
